@@ -1,6 +1,7 @@
 package com.example.bck.service;
 
 import com.example.bck.dto.GroupDTO;
+import com.example.bck.mapper.GroupMapper;
 import com.example.bck.model.Group;
 import com.example.bck.repository.GroupRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,28 +14,30 @@ import java.util.stream.Collectors;
 public class GroupService {
 
   private final GroupRepository groupRepository;
+  private final GroupMapper groupMapper;
 
   @Autowired
-  public GroupService(GroupRepository groupRepository) {
+  public GroupService(GroupRepository groupRepository, GroupMapper groupMapper) {
     this.groupRepository = groupRepository;
+    this.groupMapper = groupMapper;
   }
 
   public List<GroupDTO> findAll() {
     return groupRepository.findAll().stream()
-        .map(this::convertToDTO)
-        .collect(Collectors.toList());
+        .map(groupMapper::groupToGroupDTO)
+        .toList();
   }
 
   public GroupDTO findById(Long id) {
     Group group = groupRepository.findById(id)
         .orElseThrow(() -> new RuntimeException("Group not found with id " + id));
-    return convertToDTO(group);
+    return groupMapper.groupToGroupDTO(group);
   }
 
   public GroupDTO save(GroupDTO groupDTO) {
-    Group group = convertToEntity(groupDTO);
+    Group group = groupMapper.groupDTOToGroup(groupDTO);
     Group savedGroup = groupRepository.save(group);
-    return convertToDTO(savedGroup);
+    return groupMapper.groupToGroupDTO(savedGroup);
   }
 
   public GroupDTO update(Long id, GroupDTO groupDTO) {
@@ -42,7 +45,7 @@ public class GroupService {
         .orElseThrow(() -> new RuntimeException("Group not found with id " + id));
     group.setName(groupDTO.getName());
     Group updatedGroup = groupRepository.save(group);
-    return convertToDTO(updatedGroup);
+    return groupMapper.groupToGroupDTO(updatedGroup);
   }
 
   public void delete(Long id) {
@@ -51,19 +54,4 @@ public class GroupService {
     groupRepository.delete(group);
   }
 
-  private GroupDTO convertToDTO(Group group) {
-    GroupDTO dto = new GroupDTO();
-    dto.setId(group.getId());
-    dto.setName(group.getName());
-    return dto;
-  }
-
-  private Group convertToEntity(GroupDTO dto) {
-    Group group = new Group();
-    if (dto.getId() != null) {
-      group.setId(dto.getId());
-    }
-    group.setName(dto.getName());
-    return group;
-  }
 }
